<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>tue_filesystem</name>
  <version>0.0.0</version>
  <description>Wrapper around the boost filesystem library</description>

  <maintainer email="S.v.d.Dries@tue.nl">Sjoerd van den Dries</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>libboost-filesystem-dev</depend>

  <test_depend>catkin_lint_cmake</test_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>

</package>
